--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="timeline-item">
                     <p class="timeline-label" data-zh="證婚儀式" data-en="Ceremony">證婚儀式</p>
                     <!--span class="timeline-separator">•</span-->
-                    <p class="timeline-time">12:30</p>
+                    <p class="timeline-time">12:30-13:00</p>
                 </div>
                 <div class="timeline-item">
                     <p class="timeline-label" data-zh="午宴" data-en="Lunch Reception">午宴</p>
@@ -156,26 +156,26 @@
                         <p data-zh="精選芝士拼盤" data-en="Selected Cheese Platter">精選芝士拼盤</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="迷你和牛漢堡" data-en="Mini Wagyu Burger">迷你和牛漢堡</p>
+                        <p data-zh="迷你和牛漢堡" data-en="Mini Wagyu beef sliders">迷你和牛漢堡</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="櫻桃番茄意式麵包" data-en="Cherry Tomato Bruschetta">櫻桃番茄意式麵包 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
-                        <p class="menu-subtext" data-zh="(香醋汁、陳年帕瑪森芝士)" data-en="(Balsamic Vinaigrette, Aged Parmesan Cheese)">(香醋汁、陳年帕瑪森芝士)</p>
+                        <p class="menu-subtext" data-zh="(香醋汁、陳年帕瑪森芝士)" data-en="(Balsamic Reduction, Aged Parmesan Cheese)">(香醋汁、陳年帕瑪森芝士)</p>
                     </div>
                 </div>
                 <div class="menu-category">
                     <h3 class="menu-category-title" data-zh="沙律" data-en="Salads">沙律</h3>
                     <div class="menu-item">
-                        <p data-zh="經典鄉村高麗菜沙律" data-en="Classic Country Coleslaw Salad">經典鄉村高麗菜沙律 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
-                        <p class="menu-subtext" data-zh="(紫甘藍、紅蘿蔔、洋蔥、新鮮香草、沙律醬)" data-en="(Purple Cabbage, Carrots, Onion, Fresh Herbs, Salad Dressing)">(紫甘藍、紅蘿蔔、洋蔥、新鮮香草、沙律醬)</p>
+                        <p data-zh="經典鄉村高麗菜沙律" data-en="Country Coleslaw Salad">經典鄉村高麗菜沙律 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
+                        <p class="menu-subtext" data-zh="(紫甘藍、紅蘿蔔、洋蔥、新鮮香草、沙律醬)" data-en="(Purple Cabbage, Carrots, Onion, Fresh Herbs, Mayonnaise)">(紫甘藍、紅蘿蔔、洋蔥、新鮮香草、沙律醬)</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="芥末籽新薯沙律" data-en="Mustard Seed New Potato Salad">芥末籽新薯沙律 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
-                        <p class="menu-subtext" data-zh="(配青蔥、煙肉)" data-en="(with Scallions, Bacon)">(配青蔥、煙肉)</p>
+                        <p class="menu-subtext" data-zh="(配青蔥、煙肉)" data-en="(with Spring Onions, Bacon)">(配青蔥、煙肉)</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="雜菜沙律" data-en="Mixed Vegetable Salad">雜菜沙律 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
-                        <p class="menu-subtext" data-zh="(配蜜糖洋蔥醬)" data-en="(with Honey Onion Dressing)">(配蜜糖洋蔥醬)</p>
+                        <p class="menu-subtext" data-zh="(配蜜糖洋蔥醬)" data-en="(with Sweet Onion Dressing)">(配蜜糖洋蔥醬)</p>
                     </div>
                 </div>
                 <div class="menu-category">
@@ -184,7 +184,7 @@
                         <p data-zh="奶油雞咖喱印度香米飯" data-en="Butter Chicken Curry with Indian Basmati Rice">奶油雞咖喱印度香米飯</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="香草蒜香雞鎚" data-en="Herb Garlic Chicken Drumsticks">香草蒜香雞鎚</p>
+                        <p data-zh="香草蒜香雞鎚" data-en="Rosemary tThyme Garlic Chicken Drumsticks">香草蒜香雞鎚</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="愛爾蘭豬肉手工香腸" data-en="Irish Pork Handmade Sausages">愛爾蘭豬肉手工香腸</p>
@@ -194,18 +194,18 @@
                         <p data-zh="美式慢煮豬肋排" data-en="American Slow-Cooked Pork Ribs">美式慢煮豬肋排</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="蜜糖烤羊腿" data-en="Honey Roasted Lamb Leg">蜜糖烤羊腿</p>
+                        <p data-zh="蜜糖烤羊腿" data-en="Honey Spit Roasted Lamb Leg">蜜糖烤羊腿</p>
                         <p class="menu-subtext" data-zh="(薄荷迷迭香)" data-en="(Mint Rosemary)">(薄荷迷迭香)</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="夏威夷麒鰍魚串" data-en="Hawaiian Mahi-Mahi Skewers">夏威夷麒鰍魚串</p>
+                        <p data-zh="夏威夷麒鰍魚串" data-en="Hawaiian Mahi-Mahi fish kabobs">夏威夷麒鰍魚串</p>
                         <p class="menu-subtext" data-zh="(配芒果莎莎醬)" data-en="(with Mango Salsa)">(配芒果莎莎醬)</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="蒜香牛油烤龍蝦尾" data-en="Garlic Butter Grilled Lobster Tail">蒜香牛油烤龍蝦尾</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="蒜辣澳洲特大虎蝦串" data-en="Garlic Chili Australian Jumbo Tiger Prawn Skewers">蒜辣澳洲特大虎蝦串</p>
+                        <p data-zh="蒜辣澳洲特大虎蝦串" data-en="Garlic Chili Australian Tiger King Prawn Skewers">蒜辣澳洲特大虎蝦串</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="煙肉包帶子" data-en="Bacon-Wrapped Scallops">煙肉包帶子</p>
@@ -213,10 +213,10 @@
                     </div>
                     <div class="menu-item">
                         <p data-zh="雜菜串燒" data-en="Mixed Vegetable Skewers">雜菜串燒 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
-                        <p class="menu-subtext" data-zh="(甜椒、蘑菇、茄子、櫛瓜、哈羅米芝士)" data-en="(Bell Pepper, Mushroom, Eggplant, Zucchini, Halloumi Cheese)">(甜椒、蘑菇、茄子、櫛瓜、哈羅米芝士)</p>
+                        <p class="menu-subtext" data-zh="(甜椒、蘑菇、茄子、櫛瓜、哈羅米芝士)" data-en="(Marinated Mixed Peppers, Mushrooms, Eggplant, Zuchini & Hallomi cheese)">(甜椒、蘑菇、茄子、櫛瓜、哈羅米芝士)</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="蒜香牛油烤玉米排" data-en="Garlic Butter Grilled Corn on the Cob">蒜香牛油烤玉米排 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
+                        <p data-zh="蒜香牛油烤玉米排" data-en="Garlic Butter Grilled Corn">蒜香牛油烤玉米排 <img src="vegan.png" alt="vegan" class="vegan-icon"></p>
                     </div>
                 </div>
                 <div class="menu-category">
@@ -229,11 +229,11 @@
                     </div>
                     <div class="menu-item">
                         <p data-zh="意大利雪糕" data-en="Italian Gelato">意大利雪糕</p>
-                        <p class="menu-subtext" data-zh="(草莓、巧克力、香草口味)" data-en="(Strawberry, Chocolate, Vanilla Flavors)">(草莓、巧克力、香草口味)</p>
+                        <p class="menu-subtext" data-zh="(咖啡、熱情果、巧克力、香草)" data-en="(Coffee, Passionfruit, Chocolate, Vanilla)">(咖啡、熱情果、巧克力、香草)</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="迷你燒烤站" data-en="Mini BBQ Station">迷你燒烤站</p>
-                        <p class="menu-subtext" data-zh="(棉花糖、麵包)" data-en="(Marshmallows, Bread)">(棉花糖、麵包)</p>
+                        <p class="menu-subtext" data-zh="(棉花糖、麵包)" data-en="(Marshmallows, Bread Slices)">(棉花糖、麵包)</p>
                     </div>
                 </div>
                 <div class="menu-category">
