--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="timeline-time">12:30-13:00</p>
                 </div>
                 <div class="timeline-item">
-                    <p class="timeline-label" data-zh="午宴" data-en="Lunch Reception">午宴</p>
+                    <p class="timeline-label" data-zh="午宴" data-en="Lunch Banquet">午宴</p>
                     <!--span class="timeline-separator">•</span-->
                     <p class="timeline-time">13:30 - 15:30</p>
                 </div>
