“add-links-and-content”

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             <div class="card-content">
                 <div class="transport-item">
                     <h3 class="transport-title" data-zh="接駁巴士 - 九龍塘開出" data-en="Shuttle Bus - Departing from Kowloon Tong">接駁巴士 - 九龍塘開出</h3>
+                    <img src="shuttleStop.png" alt="Yew Chung International School Bus Stop" class="card-image">
+                    <p class="transport-subtext" data-zh="九龍塘港鐵站D出口 耀中避車處" data-en="Kowloon Tong MTR Station Exit D Yew Chung International School Bus Stop"><a href="https://maps.app.goo.gl/wqfVGn9xnM8gYd8X7" target="_blank" rel="noopener noreferrer">九龍塘港鐵站D出口 耀中避車處</a></p>
                     <p class="transport-time" data-zh="10:00 (親屬)" data-en="10:00 (Family)">10:00 (親屬)</p>
                     <p class="transport-time" data-zh="10:30 (賓客)" data-en="10:30 (Guests)">10:30 (賓客)</p>
                 </div>
@@ -255,6 +257,8 @@
             <div class="card-content">
                 <p data-zh="迷你哥爾夫球" data-en="Mini Golf">迷你哥爾夫球</p>
                 <p data-zh="草地保齡球" data-en="Lawn Bowling">草地保齡球</p>
+                <p data-zh="庭院國皇棋" data-en="Lawn Kubb"><a href="https://www.pnlnewsports.org/hkkubb" target="_blank" rel="noopener noreferrer">庭院國皇棋</a></p>
+            
             </div>
         </section>
 
@@ -266,8 +270,8 @@
             <div class="card-icon">📷</div>
             <div class="card-content">
                 <p class="share-text" data-zh="把你拍到的照片上傳 與我們分享快樂時刻！" data-en="Upload the photos you took and share happy moments with us!">把你拍到的照片上傳 與我們分享快樂時刻！</p>
-                <a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank" class="drive-link" data-zh="上傳照片和影片" data-en="Upload Photos & Videos">
-                    上傳照片和影片
+                <a href="https://drive.google.com/drive/folders/1gz6CnRXGKegbHshBngEo5QhvsuEsLjWI?usp=sharing" target="_blank" class="drive-link" data-zh="上傳照片和影片" data-en="Upload Photos & Videos">
+                    上傳照片/影片
                 </a>
             </div>
         </section>
