“edit-transport-menu-details”

--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
                 <div class="transport-item">
                     <h3 class="transport-title" data-zh="接駁巴士 - 九龍塘開出" data-en="Shuttle Bus - Departing from Kowloon Tong">接駁巴士 - 九龍塘開出</h3>
                     <img src="shuttleStop.png" alt="Yew Chung International School Bus Stop" class="card-image">
-                    <p class="transport-subtext" data-zh="九龍塘港鐵站D出口 耀中避車處" data-en="Kowloon Tong MTR Station Exit D Yew Chung International School Bus Stop"><a href="https://maps.app.goo.gl/wqfVGn9xnM8gYd8X7" target="_blank" rel="noopener noreferrer">九龍塘港鐵站D出口 耀中避車處</a></p>
-                    <p class="transport-time" data-zh="10:15 (親屬)" data-en="10:15 (Family)">10:15 (親屬)</p>
-                    <p class="transport-time" data-zh="10:45 (賓客)" data-en="10:45 (Guests)">10:45 (賓客)</p>
+                    <p class="transport-subtext" data-zh="九龍塘港鐵站D出口 耀中避車處(地圖)" data-en="Kowloon Tong MTR Station Exit D Yew Chung International School Bus Stop (Map)"><a href="https://maps.app.goo.gl/wqfVGn9xnM8gYd8X7" target="_blank" rel="noopener noreferrer">九龍塘港鐵站D出口 耀中避車處(地圖)</a></p>
+                    <p class="transport-time" data-zh="10:15 出發(親屬)" data-en="10:15 Departure (Family)">10:15 出發(親屬)</p>
+                    <p class="transport-time" data-zh="10:45 出發(賓客)" data-en="10:45 Departure (Guests)">10:45 出發(賓客)</p>
+                    <p class="transport-subtext" data-zh="出發前15分鐘集合" data-en="Arrive 15 minutes before departure">出發前15分鐘集合</p>
                 </div>
                 <div class="transport-item">
                     <h3 class="transport-title" data-zh="接駁巴士 - Auto camper開出" data-en="Shuttle Bus - Departing from AutoCamper">接駁巴士 - Auto camper開出</h3>
@@ -155,7 +156,7 @@
         <section id="lunch-menu" class="content-card">
             <img src="bow.png" alt="decoration" class="card-bow card-bow-top-left">
             <img src="bow.png" alt="decoration" class="card-bow card-bow-top-right">
-            <h2 class="card-title" data-zh="午宴" data-en="Lunch Reception">午宴</h2>
+            <h2 class="card-title" data-zh="午宴" data-en="Lunch Banquet">午宴</h2>
             <div class="card-icon">🍽️</div>
             <div class="card-content">
                 <div class="menu-category">
@@ -192,7 +193,7 @@
                         <p data-zh="奶油雞咖喱印度香米飯" data-en="Butter Chicken Curry with Indian Basmati Rice">奶油雞咖喱印度香米飯</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="香草蒜香雞鎚" data-en="Rosemary tThyme Garlic Chicken Drumsticks">香草蒜香雞鎚</p>
+                        <p data-zh="香草蒜香雞鎚" data-en="Rosemary Thyme Garlic Chicken Drumsticks">香草蒜香雞鎚</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="愛爾蘭豬肉手工香腸" data-en="Irish Pork Handmade Sausages">愛爾蘭豬肉手工香腸</p>
@@ -202,8 +203,8 @@
                         <p data-zh="美式慢煮豬肋排" data-en="American Slow-Cooked Pork Ribs">美式慢煮豬肋排</p>
                     </div>
                     <div class="menu-item">
-                        <p data-zh="蜜糖烤羊腿" data-en="Honey Spit Roasted Lamb Leg">蜜糖烤羊腿</p>
-                        <p class="menu-subtext" data-zh="(薄荷迷迭香)" data-en="(Mint Rosemary)">(薄荷迷迭香)</p>
+                        <p data-zh="蜜糖烤羊腿" data-en="Spit Roasted Lamb Leg">香烤羊腿</p>
+                        <p class="menu-subtext" data-zh="(蜜糖薄荷迷迭香)" data-en="(Honey Mint, Rosemary)">(蜜糖薄荷迷迭香)</p>
                     </div>
                     <div class="menu-item">
                         <p data-zh="夏威夷麒鰍魚串" data-en="Hawaiian Mahi-Mahi fish kabobs">夏威夷麒鰍魚串</p>
@@ -248,7 +249,7 @@
                     <h3 class="menu-category-title" data-zh="飲品" data-en="Drinks">飲品</h3>
                     <p data-zh="紅白酒" data-en="Red and White Wine">紅白酒</p>
                     <p data-zh="汽泡酒" data-en="Sparkling Wine">汽泡酒</p>
-                    <p data-zh="果汁汽水" data-en="Juice Soda">果汁汽水</p>
+                    <p data-zh="果汁/汽水" data-en="Juice & Soda">果汁汽水</p>
                     <p data-zh="咖啡/茶" data-en="Coffee/Tea">咖啡/茶</p>
                 </div>
             </div>
