“edit-menu-details”

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
                         <p data-zh="香草蒜香雞鎚" data-en="Rosemary Thyme Garlic Chicken Drumsticks">香草蒜香雞鎚</p>
                     </div>
                     <div class="menu-item">
+                        <p data-zh="澳洲M9+和牛臀蓋肉" data-en="Wagyu M9+ Picanha">澳洲M9+和牛臀蓋肉</p>
+                    </div>
+                    <div class="menu-item">
                         <p data-zh="愛爾蘭豬肉手工香腸" data-en="Irish Pork Handmade Sausages">愛爾蘭豬肉手工香腸</p>
                         <p class="menu-subtext" data-zh="(配焦糖洋蔥、麵包卷)" data-en="(with Caramelized Onions, Bread Rolls)">(配焦糖洋蔥、麵包卷)</p>
                     </div>
@@ -249,8 +252,8 @@
                     <h3 class="menu-category-title" data-zh="飲品" data-en="Drinks">飲品</h3>
                     <p data-zh="紅白酒" data-en="Red and White Wine">紅白酒</p>
                     <p data-zh="汽泡酒" data-en="Sparkling Wine">汽泡酒</p>
-                    <p data-zh="果汁/汽水" data-en="Juice & Soda">果汁汽水</p>
-                    <p data-zh="咖啡/茶" data-en="Coffee/Tea">咖啡/茶</p>
+                    <p data-zh="果汁 & 汽水" data-en="Juice & Soda">果汁 & 汽水</p>
+                    <p data-zh="熱茶" data-en="Hot Tea">熱茶</p>
                 </div>
             </div>
         </section>
